--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Table V01</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--===============================================================================================-->
-    <link rel="icon" type="image/png" href="../static/images/icons/favicon.ico"/>
+    <link rel="icon" type="image/png" href="/images/icons/favicon.ico"/>
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="../static/vendor/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/vendor/bootstrap/css/bootstrap.min.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="../static/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="../static/vendor/animate/animate.css">
+    <link rel="stylesheet" type="text/css" href="/vendor/animate/animate.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="../static/vendor/select2/select2.min.css">
+    <link rel="stylesheet" type="text/css" href="/vendor/select2/select2.min.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="../static/vendor/perfect-scrollbar/perfect-scrollbar.css">
+    <link rel="stylesheet" type="text/css" href="/vendor/perfect-scrollbar/perfect-scrollbar.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="../static/css/util.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/css/util.css">
     <!--===============================================================================================-->
 </head>
 <body>
@@ -30,130 +30,38 @@
                 <table>
                     <thead>
                     <tr class="table100-head">
-                        <th class="column1">DESCRIPTION</th>
-                        <th class="column2">name</th>
-                        <th class="column3">type</th>
-                        <th class="column4">기타</th>
-<!--                        <th class="column5">Quantity</th>-->
-<!--                        <th class="column6">Total</th>-->
+                        <th class="column1">ID</th>
+                        <th class="column2">접수일시</th>
+                        <th class="column3">담당엔지니어</th>
+                        <th class="column4">고객명</th>
+                        <th class="column5">납품된 시스템 정보</th>
+                        <th class="column6">제조사</th>
+                        <th class="column7">모델</th>
+                        <th class="column8">시리얼</th>
+                        <th class="column9">용도</th>
+                        <th class="column10">지원일시(시작)</th>
+                        <th class="column11">지원일시(완료)</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr>
-                        <td class="column1">2017-09-29 01:22</td>
-                        <td class="column2">200398</td>
-                        <td class="column3">iPhone X 64Gb Grey</td>
-                        <td class="column4">$999.00</td>
-<!--                        <td class="column5">1</td>-->
-<!--                        <td class="column6">$999.00</td>-->
+                    <tr th:each="customer : ${customers}">
+                        <td class="column1"><span th:text="${customer.id}"></span></td>
+                        <td class="column2"><span th:text="${customer.regdate}"></span></td>
+                        <td class="column3"><span th:text="${customer.engiName}"></span></td>
+                        <td class="column4"><span th:text="${customer.custName}"></span></td>
+                        <td class="column5"><span th:text="${customer.systemInfo}"></span></td>
+                        <td class="column6"><span th:text="${customer.manufacture}"></span></td>
+                        <td class="column7"><span th:text="${customer.model}"></span></td>
+                        <td class="column8"><span th:text="${customer.serial}"></span></td>
+                        <td class="column9"><span th:text="${customer.usg}"></span></td>
+                        <td class="column10"><span th:text="${customer.svcStartDate}"></span></td>
+                        <td class="column11"><span th:text="${customer.svcEndDate}"></span></td>
                     </tr>
-                    <tr>
-                        <td class="column1">2017-09-28 05:57</td>
-                        <td class="column2">200397</td>
-                        <td class="column3">Samsung S8 Black</td>
-                        <td class="column4">$756.00</td>
-<!--                        <td class="column5">1</td>-->
-<!--                        <td class="column6">$756.00</td>-->
-                    </tr>
-                    <tr>
-                        <td class="column1">2017-09-26 05:57</td>
-                        <td class="column2">200396</td>
-                        <td class="column3">Game Console Controller</td>
-                        <td class="column4">$22.00</td>
-<!--                        <td class="column5">2</td>-->
-<!--                        <td class="column6">$44.00</td>-->
-                    </tr>
-                    <tr>
-                        <td class="column1">2017-09-25 23:06</td>
-                        <td class="column2">200392</td>
-                        <td class="column3">USB 3.0 Cable</td>
-                        <td class="column4">$10.00</td>
-<!--                        <td class="column5">3</td>-->
-<!--                        <td class="column6">$30.00</td>-->
-                    </tr>
-                    <tr>
-                        <td class="column1">2017-09-24 05:57</td>
-                        <td class="column2">200391</td>
-                        <td class="column3">Smartwatch 4.0 LTE Wifi</td>
-                        <td class="column4">$199.00</td>
-<!--                        <td class="column5">6</td>-->
-<!--                        <td class="column6">$1494.00</td>-->
-                    </tr>
-                    <tr>
-                        <td class="column1">2017-09-23 05:57</td>
-                        <td class="column2">200390</td>
-                        <td class="column3">Camera C430W 4k</td>
-                        <td class="column4">$699.00</td>
-<!--                        <td class="column5">1</td>-->
-<!--                        <td class="column6">$699.00</td>-->
-                    </tr>
-                    <tr>
-                        <td class="column1">2017-09-22 05:57</td>
-                        <td class="column2">200389</td>
-                        <td class="column3">Macbook Pro Retina 2017</td>
-                        <td class="column4">$2199.00</td>
-<!--                        <td class="column5">1</td>-->
-<!--                        <td class="column6">$2199.00</td>-->
-                    </tr>
-                    <tr>
-                        <td class="column1">2017-09-21 05:57</td>
-                        <td class="column2">200388</td>
-                        <td class="column3">Game Console Controller</td>
-                        <td class="column4">$999.00</td>
-<!--                        <td class="column5">1</td>-->
-<!--                        <td class="column6">$999.00</td>-->
-                    </tr>
-                    <tr>
-                        <td class="column1">2017-09-19 05:57</td>
-                        <td class="column2">200387</td>
-                        <td class="column3">iPhone X 64Gb Grey</td>
-                        <td class="column4">$999.00</td>
-<!--                        <td class="column5">1</td>-->
-<!--                        <td class="column6">$999.00</td>-->
-                    </tr>
-                    <tr>
-                        <td class="column1">2017-09-18 05:57</td>
-                        <td class="column2">200386</td>
-                        <td class="column3">iPhone X 64Gb Grey</td>
-                        <td class="column4">$999.00</td>
-<!--                        <td class="column5">1</td>-->
-<!--                        <td class="column6">$999.00</td>-->
-                    </tr>
-                    <tr>
-                        <td class="column1">2017-09-22 05:57</td>
-                        <td class="column2">200389</td>
-                        <td class="column3">Macbook Pro Retina 2017</td>
-                        <td class="column4">$2199.00</td>
-<!--                        <td class="column5">1</td>-->
-<!--                        <td class="column6">$2199.00</td>-->
-                    </tr>
-                    <tr>
-                        <td class="column1">2017-09-21 05:57</td>
-                        <td class="column2">200388</td>
-                        <td class="column3">Game Console Controller</td>
-                        <td class="column4">$999.00</td>
-<!--                        <td class="column5">1</td>-->
-<!--                        <td class="column6">$999.00</td>-->
-                    </tr>
-                    <tr>
-                        <td class="column1">2017-09-19 05:57</td>
-                        <td class="column2">200387</td>
-                        <td class="column3">iPhone X 64Gb Grey</td>
-                        <td class="column4">$999.00</td>
-<!--                        <td class="column5">1</td>-->
-<!--                        <td class="column6">$999.00</td>-->
-                    </tr>
-                    <tr>
-                        <td class="column1">2017-09-18 05:57</td>
-                        <td class="column2">200386</td>
-                        <td class="column3">iPhone X 64Gb Grey</td>
-                        <td class="column4">$999.00</td>
-<!--                        <td class="column5">1</td>-->
-<!--                        <td class="column6">$999.00</td>-->
-                    </tr>
-
                     </tbody>
                 </table>
+            </div>
+            <div class="btn_area_right">
+            <button type="button" class="btn_write" onclick="()">수정</button>
             </div>
         </div>
     </div>
@@ -161,14 +69,14 @@
 
 
 <!--===============================================================================================-->
-<script src="../static/vendor/jquery/jquery-3.2.1.min.js"></script>
+<script src="/vendor/jquery/jquery-3.2.1.min.js"></script>
 <!--===============================================================================================-->
-<script src="../static/vendor/bootstrap/js/popper.js"></script>
-<script src="../static/vendor/bootstrap/js/bootstrap.min.js"></script>
+<script src="/vendor/bootstrap/js/popper.js"></script>
+<script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
 <!--===============================================================================================-->
-<script src="../static/vendor/select2/select2.min.js"></script>
+<script src="/vendor/select2/select2.min.js"></script>
 <!--===============================================================================================-->
-<script src="../static/js/main.js"></script>
+<script src="/js/main.js"></script>
 
 </body>
 </html>
