--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -102,6 +102,18 @@ iframe {
   margin: 0 auto;
 }
 
+.btn_area_right button.btn_write {
+    float: right;
+    width: 90px;
+    background-color: #ffffff;
+    border-radius: 17px;
+    height: 39px;
+    margin-top: 10px;
+    font-size: 16px;
+    color: #000000;
+    opacity: 0.8;
+    }
+
 .container-table100 {
   width: 100%;
   min-height: 100vh;
@@ -110,20 +122,16 @@ iframe {
   background: -o-linear-gradient(45deg, #4158d0, #c850c0);
   background: -moz-linear-gradient(45deg, #4158d0, #c850c0);
   background: linear-gradient(45deg, #4158d0, #c850c0);
-
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
   display: -ms-flexbox;
-  display: flex;
   align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
-  padding: 33px 30px;
 }
 
 .wrap-table100 {
-  width: 1170px;
+  width: 1600px;
 }
 
 table {
@@ -170,12 +178,12 @@ table td.r, table th.r {
   font-family: OpenSans-Regular;
   font-size: 18px;
   color: #fff;
-  line-height: 1.2;
+  /* line-height: 1.2; */
   font-weight: unset;
 }
 
 tbody tr:nth-child(even) {
-  background-color: #f5f5f5;
+  background-color: #fafafa;
 }
 
 tbody tr {
@@ -193,33 +201,51 @@ tbody tr:hover {
 }
 
 .column1 {
-  width: 200px;
-  padding-left: 40px;
+  width: 50px;
+  /* padding-left: 40px; */
 }
 
 .column2 {
-  width: 200px;
+  width: 100px;
 }
 
 .column3 {
-  width: 200px;
+  width: 130px;
 }
 
 .column4 {
-  width: 500px;
+  width: 130px;
   /* text-align: left; */
 }
 
 .column5 {
   width: 170px;
-  text-align: right;
+  text-align: center;
 }
 
 .column6 {
-  width: 222px;
-  text-align: right;
-  padding-right: 62px;
-}
+  width: 150px;
+  text-align: center;
+  }
+  /* padding-right: 62px; */
+  .column7 {
+  width: 120px;
+  }
+    .column8 {
+  width: 100px;
+    }
+  .column9 {
+  width: 150px;
+  }
+ .column10 {
+  width: 120px;
+  }
+
+  .column11 {
+  width: 120px;
+  }
+
+
 
 
 @media screen and (max-width: 992px) {
@@ -272,10 +298,31 @@ tbody tr:hover {
   table tbody tr td:nth-child(6):before {
     content: "Total";
   }
+   table tbody tr td:nth-child(6):before {
+      content: "Total";
+    }
+   table tbody tr td:nth-child(6):before {
+        content: "Total";
+      }
+        table tbody tr td:nth-child(6):before {
+          content: "Total";
+        }
+          table tbody tr td:nth-child(6):before {
+            content: "Total";
+          }
+            table tbody tr td:nth-child(6):before {
+              content: "Total";
+            }
 
   .column4,
   .column5,
-  .column6 {
+  .column6,
+  .column7,
+  .column8,
+  .column9,
+  .column10,
+  .column11
+{
     text-align: left;
   }
 
@@ -284,7 +331,13 @@ tbody tr:hover {
   .column6,
   .column1,
   .column2,
-  .column3 {
+  .column3,
+  .column7,
+  .column8,
+  .column9,
+  .column10,
+  .column11,
+           {
     width: 100%;
   }
 
@@ -292,10 +345,9 @@ tbody tr:hover {
     font-size: 14px;
   }
 
- table tbody tr td.column4 {
-      text-align: left;
-      padding-left: 50px;
-  }
+tbody tr td.column4 {
+    text-align: left;
+}
 }
 
 @media (max-width: 576px) {
